fix: use display:none instead of visibility

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1088,8 +1088,8 @@ body:not(.post-template) .post-title {
  @media only screen and (max-width: 1400px) {
    #markdown-toc {
      /*left: 60px;*/
-     display: hidden;
-     visibility: hidden;
+     display: none;
+     /*visibility: hidden;*/
    }
 }
 
